--- a/templates/programmes/programme-view-detail.html
+++ b/templates/programmes/programme-view-detail.html
@@ -184,7 +184,7 @@
     </div>
 
     <div ng-if="vm.selectedTab == 'results'">
-        <results></results>
+        <results programme-id="{{vm.programmeId}}"></results>
         
     </div>
 </div>
