--- a/templates/results/results-table.html
+++ b/templates/results/results-table.html
@@ -2,25 +2,31 @@
     <div class="col-md-12">
 
 			<script type="text/ng-template" id="result-tree">
-			    <div ng-if="item.children.length" class="row parent collapsed">
+			    <div class="row parent collapsed">
 			        <div class="col-xs-12">
 			        	<div class="wrap">
-			                <!-- <span ng-click="vm.toggleHideChildren($event)"></span> -->
 			                <span>
-			                <label class="indicator-selector-label" ng-class="{'indicator-header': vm.indicators[item.indicatorName].header}">
+			                <label class="indicator-selector-label" ng-class="{'indicator-header': vm.indicators[item.indicatorName].level == 0}">
 			                <input
-			                	ng-if="vm.indicators[item.indicatorName].header" 
+			                	ng-if="vm.indicators[item.indicatorName].level != 3" 
 			                	type="checkbox" 
 			                	name="selectedIndicator[]"
 			                	ng-click="vm.setSelected(item, $event)" 
 			                	value="{{item.indicatorName}}"
-			                	ng-checked="selectedIndicators.indexOf(item.indicatorName) > -1" 
-			                	ng-class="{'': item.children.length}">
+			                	ng-checked="selectedIndicators.indexOf(item.indicatorName) > -1">
 			                	
-			                	<span ng-if="vm.indicators[item.indicatorName].header">
+			                	<span ng-if="vm.indicators[item.indicatorName].level < 1">
 			                		{{ item.displayName }}
+
+			                		<a 
+			                			ng-if="vm.indicators[item.indicatorName].level == 0"
+			                			class="result-description-info" 
+			                			tooltips 
+			                			tooltip-template="<p>{{vm.indicatorMeta[item.indicatorName].description}}</p>"
+			                			tooltip-class="indicator-tooltip"
+			                			tooltip-append-to-body="true"></a>
 			                	</span>
-			                	<span ng-if="!vm.indicators[item.indicatorName].header">
+			                	<span ng-if="vm.indicators[item.indicatorName].level > 0">
 			                		{{ item.displayName + ' (' + vm.indicators[item.indicatorName].activity_count + ' projects)' }}
 			                	</span>
 			                </label>
@@ -28,30 +34,7 @@
 			            </div>
 			        </div>
 			    </div>
-
-			    <div ng-if="!item.children.length" class="row">
-			        <div class="col-xs-12">
-			        	<div class="wrap">	
-			                <!--<span class="noexpand">
-			                 <input 
-			                	type="checkbox" 
-			                	name="selectedIndicator[]"
-			                	ng-click="vm.setSelected(item)" 
-			                	value="{{item.indicatorName}}"
-			                	ng-checked={{selectedIndicators[item.indicatorName]}}
-			                	ng-class="{'': item.children.length}"> -->
-			                	
-			                	<!-- <span ng-if="vm.indicators[item.indicatorName].header"> -->
-			                		<!-- {{ item.displayName }} -->
-			                	<!-- </span> -->
-			                	<!-- <span ng-if="!vm.indicators[item.indicatorName].header"> -->
-			                	{{ item.displayName + ' (' + vm.indicators[item.indicatorName].activity_count + ' projects)' }}
-			                	<!-- </span> 
-			                </span>-->
-		                </div>
-			        </div>
-			    </div>
-
+			 
 			    <div ng-if="item.children.length" class="children">
 			        <div ng-repeat="item in item.children" ng-include="'result-tree'"></div>
 			    </div>
@@ -59,9 +42,6 @@
 
 			<div class="fake-table" ng-show="vm.resultIndicators.length != 0">
 
-				<div class="row results head">
-			        <div class="col-xs-12"><h3>Select result indicators</h3></div>
-			    </div>
 			    <div class="results body" 
 			        ng-repeat="item in vm.resultIndicators"
 			        ng-include="'result-tree'"
