change activity status header to program

--- a/templates/activities/activity-list.html
+++ b/templates/activities/activity-list.html
@@ -39,7 +39,7 @@
     <thead>
         <tr>
             <th width="500">Project title</th>
-            <th>Project status</th>
+            <th>Programme</th>
             <th>Country</th>
             <th width="200">Total budget</th>
         </tr>
