--- a/templates/countries/country-view-detail.html
+++ b/templates/countries/country-view-detail.html
@@ -1,4 +1,4 @@
-<div id="main-content" ng-if="!vm.country && !vm.loading">
+<div id="main-content" ng-if="!vm.country && !vm.busy">
 
     <div class="container extra">
 
