--- a/templates/programmes/programme-view-detail.html
+++ b/templates/programmes/programme-view-detail.html
@@ -1,4 +1,4 @@
-<div id="main-content" ng-if="!vm.activity && !vm.loading">
+<div id="main-content" ng-if="!vm.activity && !vm.busy">
 
     <div class="container extra">
 
