--- a/templates/implementingOrganisations/implementing-organisation-view-detail.html
+++ b/templates/implementingOrganisations/implementing-organisation-view-detail.html
@@ -1,4 +1,4 @@
-<div id="main-content" ng-if="!vm.part_org_activities.length && !vm.loading">
+<div id="main-content" ng-if="!vm.part_org_activities.length && !vm.busy">
 
     <div class="container extra">
 
@@ -85,10 +85,10 @@
                     <div class="panel lightblue with-pie">
                         <h3>Projects per programme</h3>
                         <hr>
-                        <oipa-pie-chart group-by="related_activity" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
+                        <oipa-pie-chart group-by="related_activity" aggregation-key="activity_count" aggregations="activity_count,incoming_fund"></oipa-pie-chart>
                         <h3>Projects per country</h3>
                         <hr>
-                        <oipa-pie-chart group-by="recipient_country" aggregation-key="count" aggregations="count,recipient_country_percentage_weighted_incoming_fund"></oipa-pie-chart>
+                        <oipa-pie-chart group-by="recipient_country" aggregation-key="activity_count" aggregations="activity_count,incoming_fund"></oipa-pie-chart>
                     </div>
                     <div class="panel lightblue with-table">
                         <h3>Partner information</h3>
