--- a/templates/results/results-project-list.html
+++ b/templates/results/results-project-list.html
@@ -58,18 +58,14 @@
               {{item.result_indicator_title}}
             </td>
             <td>
-              {{item.result_indicator_description_short}}
-              <a 
-                ng-if="item.result_indicator_description_short.length == 45" 
-                ng-href="#" 
-                ng-click="item.result_indicator_description_short = item.result_indicator_description">
-                ... More
-              </a>
-              <a 
-                ng-if="item.result_indicator_description_short.length > 45" 
-                ng-href="#" 
-                ng-click="item.result_indicator_description_short = item.result_indicator_description_short.substr(0,45)">
-                ... Less
+              <span ng-if="item.short">
+                {{item.result_indicator_description_short}}
+                 <a ng-href="#" ng-click="item.short = false">... More</a>
+              </span>
+              <span ng-if="!item.short">
+                {{item.result_indicator_description}}
+                <a ng-href="#" ng-click="item.short = true">... Less
+              </span>
               </a>
             </td>
             <td>
@@ -77,8 +73,7 @@
             </td>
 
             <td ng-if="item.period_actual_value != null">
-              <span ng-if="item.result_indicator_title.indexOf('co-invest') > -1">&euro;</span>{{item.period_actual_value | number : 0}}
-              ({{item.period_target_year | date : 'yyyy'}})
+              {{item.period_actual_value}}
               <a class="comment" ng-if="item.period_actual_comment != null" tooltips tooltip-template="{{item.period_actual_comment.narratives[0].text}}"></a>
             </td>
             <td ng-if="item.period_actual_value == null">
@@ -86,8 +81,7 @@
             </td>
 
             <td ng-if="item.period_target_value != null">
-              <span ng-if="item.result_indicator_title.indexOf('co-invest') > -1">&euro;</span>{{item.period_target_value | number : 0}}
-              ({{item.period_target_year | date : 'yyyy'}})
+              {{item.period_target_value}}
               <a class="comment" ng-if="item.period_target_comment != null" tooltips tooltip-template="{{item.period_target_comment.narratives[0].text}}"></a>
             </td>
             <td ng-if="item.period_target_value == null">
